# hierarchical_data

./: README.md  db.sqlite3  pyproject.toml
folder_tree/: admin.py  apps.py  models.py  urls.py  views.py
folder_tree/migrations/: 0001_initial.py  0002_auto_20200615_2239.py
folder_tree/templates/: index.html
hierarchical_data/: settings.py  urls.py
